# Beginner-To-Intermediate-Hub

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LEARNING_PATHS.md  README.md  requirements.txt
Projects/C++/Advanced-Projects/machine-learning/ml-1/: README.md  neural_network.cpp
Projects/C++/Beginner-Projects/calculator/calc-1/: README.md  calculator.cpp
Projects/C++/Beginner-Projects/calculator/calc-2/: enhanced_calculator.cpp
Projects/C++/Beginner-Projects/data-structures/ds-1/: data_structures.cpp
Projects/C++/Beginner-Projects/hello-cpp/hello-1/: hello.cpp
Projects/C++/Beginner-Projects/password-generator/gen-1/: README.md  password_generator.cpp
Projects/C++/Beginner-Projects/string-processor/proc-1/: README.md  string_processor.cpp
Projects/C++/Beginner-Projects/text-game/game-1/: text_game.cpp
Projects/C++/Beginner-Projects/to-do-list/todo-1/: todo_list.cpp
Projects/C++/Intermediate-Projects/database-manager/db-1/: README.md  database_manager.cpp
Projects/C++/Intermediate-Projects/web-server/server-1/: README.md  web_server.cpp
Projects/C/Beginner-Projects/: README.md
Projects/C/Beginner-Projects/calculator/calc-1/: README.md  calculator.c
Projects/C/Beginner-Projects/calculator/calc-2/: calculator.c
Projects/Python/Beginner-Projects/: README.md
Projects/Python/Beginner-Projects/Hello, world/: Hello, World.py
Projects/Rust/Intermediate-Projects/async-web-server/server-1/: Cargo.toml  README.md  main.rs
Projects/Rust/Intermediate-Projects/database-manager/db-1/: Cargo.toml  README.md  main.rs
(+97 files in other folders)
