[package]
name = "async-web-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "async-web-server"
path = "main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
