[package]
name = "database-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "database-manager"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
